# sm-demo

./: .gitignore  Dockerfile  README.md  apphosting.yaml  main.py  pyproject.toml  requirements.txt
.agents/copywriter/: config.json  safety_rules.md
.agents/orchestrator/: config.json  rules.md
.agents/safety_auditor/: config.json  safety_schema.json
.agents/visual_production/: config.json  style_guide.md
agents/: __init__.py  agent.py  coordinator.py  firestore.py  rag_search.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/generate-image/: route.ts
frontend/app/api/generate-persona/: route.ts
frontend/app/api/personas/: route.ts
frontend/app/api/run/: route.ts
frontend/components/: campaign-form.tsx  campaign-history.tsx  login-screen.tsx  media-generator-panel.tsx  persona-creator-form.tsx  preview-matrix.tsx  progress-timeline.tsx
frontend/lib/: firebase-client.ts
frontend/types/: index.ts
scripts/: deploy_cloud_run.sh  deploy_workflows.sh  local_emulator.sh
tests/integration/: __init__.py  test_live_gcp.py  test_live_search.py
tests/unit/: __init__.py
workflows/: campaign_workflow.yaml  sub_workflow_helpers.yaml
