[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "social-media-agent-platform"
version = "1.0.0"
description = "Enterprise Multi-Agent Social Media Automation Engine"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "google-cloud-firestore>=2.27.0",
    "google-cloud-pubsub>=2.19.0",
    "google-cloud-workflows>=1.12.0",
    "google-cloud-storage>=2.14.0",
    "google-cloud-aiplatform>=1.39.0",
    "google-adk>=2.1.0",
    "google-genai>=1.75.0",
    "pydantic>=2.6.0",
    "jsonschema>=4.21.0",
    "pyyaml>=6.0.1",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
